[gd_scene load_steps=7 format=3 uid="uid://bl4gd7quwa8xs"]

[ext_resource type="Script" uid="uid://bwhrj001flknr" path="res://src/ui/UI.gd" id="1_grnel"]
[ext_resource type="Texture2D" uid="uid://p77iol77tiet" path="res://assets/ui/painel do chevette.png" id="2_8pwlb"]
[ext_resource type="PackedScene" uid="uid://du2vkw6t2xnit" path="res://src/ui/Compass.tscn" id="2_tmjim"]
[ext_resource type="PackedScene" uid="uid://daueqi3wefwil" path="res://src/ui/Speedometer.tscn" id="3_d40vq"]
[ext_resource type="PackedScene" uid="uid://dfix4tgvexgjl" path="res://src/ui/SteeringWheel.tscn" id="5_3xxhj"]
[ext_resource type="PackedScene" uid="uid://cffipdyg6v2m4" path="res://src/ui/CarProp.tscn" id="6_xpquv"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grnel")

[node name="PanelTextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = -26.0
offset_right = 1155.0
offset_bottom = 654.0
texture = ExtResource("2_8pwlb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 385.0
offset_bottom = 113.0

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TEST UI OUTPUT"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TEST UI OUTPUT"

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TEST UI OUTPUT"

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TEST UI OUTPUT"

[node name="Label5" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TEST UI OUTPUT"

[node name="Compass" parent="." instance=ExtResource("2_tmjim")]
layout_mode = 1
anchor_right = 0.161
anchor_bottom = 0.208
offset_left = 800.0
offset_top = 394.82
offset_right = 796.528
offset_bottom = 386.036

[node name="Speedometer" parent="." instance=ExtResource("3_d40vq")]
layout_mode = 1
anchor_left = 0.205
anchor_top = 0.639
anchor_right = 0.363
anchor_bottom = 0.833
offset_left = -0.160019
offset_top = -0.072052
offset_right = -0.175995
offset_bottom = 0.215942

[node name="SteeringWheel" parent="." instance=ExtResource("5_3xxhj")]
layout_mode = 1
anchor_left = 0.194
anchor_top = 0.503
anchor_right = 0.48
anchor_bottom = 1.0
offset_left = 0.511993
offset_top = 0.0559998
offset_right = 0.496033
offset_bottom = 2.28796

[node name="CarProp" parent="." instance=ExtResource("6_xpquv")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.498
anchor_top = 0.111
anchor_right = 0.533
anchor_bottom = 0.111
offset_left = 0.303955
offset_top = 0.071991
offset_right = -0.0160522
offset_bottom = 40.072
